# advent_of_code

./: $  .gitignore  :  :w  ;  Cargo.toml  README.md  circuit_visualization.dot  out.txt
.github/workflows/: aoc_2023.yml  aoc_2024.yml  aoc_2025.yaml  rust.yml
aoc_2023/: Cargo.toml
aoc_2023/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  lib.rs
aoc_2024/: Cargo.toml
aoc_2024/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  lib.rs
aoc_2025/: Cargo.toml
aoc_2025/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  lib.rs
aoc_lib/: Cargo.toml
aoc_lib/src/: answer.rs  directions.rs  input.rs  lib.rs  maths.rs  matrix.rs  vec2.rs
src/: args.rs  main.rs
src/days/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs  mod.rs
src/helper_lib/: answer.rs  consts.rs  directions.rs  input.rs  maths.rs  (+6 more)
(+1 files in other folders)
