[package]
name = "advent_of_code"
version = "0.2.0"
edition = "2021"

[workspace]
members = ["aoc_lib", "aoc_2023", "aoc_2024"]

[dependencies]
aoc_lib = { path = "aoc_lib" }
aoc_2023 = { path = "aoc_2023" }
aoc_2024 = { path = "aoc_2024" }

anyhow = "1.0.93"
clap = { version = "4.5.21", features = ["derive"] }
